--- a/haskell-hpack/trunk/PKGBUILD
+++ b/haskell-hpack/trunk/PKGBUILD
@@ -33,7 +33,7 @@ build() {
 
 check() {
   cd $_hkgname-$pkgver
-  runhaskell Setup test || warning "https://github.com/sol/hpack/issues/358"
+  runhaskell Setup test || echo "https://github.com/sol/hpack/issues/358"
 }
 
 package() {
