--- a/haskell-singletons/trunk/PKGBUILD
+++ b/haskell-singletons/trunk/PKGBUILD
@@ -28,7 +28,7 @@ build() {
 
 check() {
     cd $_hkgname-$pkgver
-    runhaskell Setup test || warning "Tests failed"
+    runhaskell Setup test || echo "Tests failed"
 }
 
 package() {
