--- a/haskell-yaml/trunk/PKGBUILD
+++ b/haskell-yaml/trunk/PKGBUILD
@@ -31,7 +31,7 @@ build() {
 
 check() {
     cd $_hkgname-$pkgver
-    LC_CTYPE=en_US.UTF-8 runhaskell Setup test || warning "Tests failed"
+    LC_CTYPE=en_US.UTF-8 runhaskell Setup test || echo "Tests failed"
 }
 
 package() {
