--- a/hdf5-openmpi/trunk/PKGBUILD
+++ b/hdf5-openmpi/trunk/PKGBUILD
@@ -83,7 +83,7 @@ check() {
     export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/hl/c++/src/.libs/
     export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/hl/fortran/src/.libs/
     # This is a parallel build, they are always OpenMPI bugs
-    make check || warning "Tests failed"
+    make check || echo "Tests failed"
 }
 
 package() {
