--- a/idris/trunk/PKGBUILD
+++ b/idris/trunk/PKGBUILD
@@ -48,7 +48,7 @@ build() {
 check() {
     cd Idris-dev-$pkgver
     # TODO: figure out the tests
-    PATH="$PWD/dist/build:$PWD/dist/build/idris:$PATH" LD_LIBRARY_PATH="$PWD/dist/build" IDRIS_LIBRARY_PATH="$PWD/libs" runhaskell Setup test || warning "Tests failed"
+    PATH="$PWD/dist/build:$PWD/dist/build/idris:$PATH" LD_LIBRARY_PATH="$PWD/dist/build" IDRIS_LIBRARY_PATH="$PWD/libs" runhaskell Setup test || echo "Tests failed"
 }
 
 package() {
