--- a/mailman/trunk/PKGBUILD
+++ b/mailman/trunk/PKGBUILD
@@ -65,13 +65,13 @@ prepare() {
   local filename
   for filename in "${source[@]}"; do
     if [[ "$filename" =~ \.patch$ ]]; then
-      msg2 "Applying patch ${filename##*/}"
+      echo "Applying patch ${filename##*/}"
       patch -p1 -N -i "$srcdir/${filename##*/}"
     fi
   done
 
   # some files in mailman doesn't use configure parameter
-  msg2 'Fix python2 sheebang'
+  echo 'Fix python2 sheebang'
   find . -type f -exec \
     sed -i '1s,^#! \?/usr/bin/\(env \|\)python$,#!/usr/bin/python2,' {} \;
 }
