--- a/peda/trunk/PKGBUILD
+++ b/peda/trunk/PKGBUILD
@@ -21,7 +21,7 @@ prepare() {
 
 build() {
   cd ${pkgname}-${pkgver}
-  msg2 'Compiling python objects...'
+  echo 'Compiling python objects...'
   python -m compileall . >/dev/null
   python -O -m compileall . >/dev/null
 }
