--- a/postgrest/trunk/PKGBUILD
+++ b/postgrest/trunk/PKGBUILD
@@ -52,7 +52,7 @@ check() {
     createdb postgrest_test
 
     # TODO: user authentication issue?
-    POSTGREST_TEST_CONNECTION=$(test/create_test_db "postgres://$USER@localhost" postgrest_test) runhaskell Setup test || warning "Tests failed"
+    POSTGREST_TEST_CONNECTION=$(test/create_test_db "postgres://$USER@localhost" postgrest_test) runhaskell Setup test || echo "Tests failed"
 
     # Disabled: uses stack
     # test/io-tests.sh
