--- a/python-apispec-webframeworks/trunk/PKGBUILD
+++ b/python-apispec-webframeworks/trunk/PKGBUILD
@@ -20,7 +20,7 @@ build() {
 
 check() {
   cd apispec-webframeworks-$pkgver
-  python setup.py pytest || warning "https://github.com/marshmallow-code/apispec-webframeworks/issues/45"
+  python setup.py pytest || echo "https://github.com/marshmallow-code/apispec-webframeworks/issues/45"
 }
 
 package() {
