--- a/python-astor/trunk/PKGBUILD
+++ b/python-astor/trunk/PKGBUILD
@@ -20,7 +20,7 @@ build() {
 
 check() {
   cd astor-$pkgver
-  nosetests3 || warning "https://github.com/berkerpeksag/astor/issues/146"
+  nosetests3 || echo "https://github.com/berkerpeksag/astor/issues/146"
 }
 
 package() {
