--- a/python-bluepy/trunk/PKGBUILD
+++ b/python-bluepy/trunk/PKGBUILD
@@ -23,7 +23,7 @@ prepare() {
 }
 
 build() {
-  msg2 "Building python..."
+  echo "Building python..."
   cd ${_pyname}-${pkgver}
   python setup.py build
   make -C bluepy
