--- a/python-cx_freeze/trunk/PKGBUILD
+++ b/python-cx_freeze/trunk/PKGBUILD
@@ -27,7 +27,7 @@ build() {
 
 check() {
   cd cx_Freeze-$pkgver
-  python setup.py nosetests || warning "Tests failed"
+  python setup.py nosetests || echo "Tests failed"
 }
 
 package() {
