--- a/python-gevent/trunk/PKGBUILD
+++ b/python-gevent/trunk/PKGBUILD
@@ -46,7 +46,7 @@ check() {
     export PYTHONPATH="$PYTHONPATH:/usr/lib/python3.6/site-packages"
     python setup.py install
     python -m gevent.tests
-  ) || warning "Tests failed"
+  ) || echo "Tests failed"
 
   (
     cd "$srcdir"/gevent-$pkgver-py2
@@ -55,7 +55,7 @@ check() {
     export PYTHONPATH="$PYTHONPATH:/usr/lib/python2.7/site-packages"
     python setup.py install
     python2 -m gevent.tests
-  ) || warning "Tests failed"
+  ) || echo "Tests failed"
 }
 
 package_python-gevent() {
