--- a/python-openmdao/trunk/PKGBUILD
+++ b/python-openmdao/trunk/PKGBUILD
@@ -29,7 +29,7 @@ build() {
 
 check() {
   cd OpenMDAO-$pkgver
-  PYTHONPATH="$PWD/build/lib" testflo -n 16 --timeout=120 openmdao || warning "Tests failed"
+  PYTHONPATH="$PWD/build/lib" testflo -n 16 --timeout=120 openmdao || echo "Tests failed"
 }
 
 package() {
