--- a/python-pytest-cache/trunk/PKGBUILD
+++ b/python-pytest-cache/trunk/PKGBUILD
@@ -35,7 +35,7 @@ check() {(
   cd "$srcdir/$_pypiname-py2"
   python2 setup.py install --root="$PWD/tmp_install" --optimize=1
   PYTHONPATH="$PWD/tmp_install/usr/lib/python2.7/site-packages:$PYTHONPATH" py.test2
-  ) || warning "Tests failed"
+  ) || echo "Tests failed"
   # Skipping tests as it's incompatibility with pytest 2.8.0, not python 3.5.
   # https://bitbucket.org/hpk42/pytest-cache/issues/11/tests-failed-with-pytest-280
 }
