--- a/python-qiniu/trunk/PKGBUILD
+++ b/python-qiniu/trunk/PKGBUILD
@@ -24,7 +24,7 @@ check() {
   export QINIU_TEST_ENV="travis"
 
   cd python-sdk-$pkgver
-  python setup.py pytest || warning "Tests failed"
+  python setup.py pytest || echo "Tests failed"
 }
 
 package() {
