--- a/python-ukpostcodeparser/trunk/PKGBUILD
+++ b/python-ukpostcodeparser/trunk/PKGBUILD
@@ -21,7 +21,7 @@ check() {
   # Expected failure: https://github.com/hamstah/ukpostcodeparser/issues/8
 
   cd "$srcdir"/ukpostcodeparser-$pkgver
-  python -m unittest discover -s ukpostcodeparser/test -p '*.py' || warning "Tests failed"
+  python -m unittest discover -s ukpostcodeparser/test -p '*.py' || echo "Tests failed"
 }
 
 package() {
