--- a/python-whoosh/trunk/PKGBUILD
+++ b/python-whoosh/trunk/PKGBUILD
@@ -22,7 +22,7 @@ build() {
 
 check() {
   cd "$srcdir"/whoosh
-  python setup.py ptr || warning "Tests failed"
+  python setup.py ptr || echo "Tests failed"
 }
 
 package() {
