--- a/python-xattr/trunk/PKGBUILD
+++ b/python-xattr/trunk/PKGBUILD
@@ -21,7 +21,7 @@ check() { (
   # Build env doesn't have permission for those xattrs
   cd "$srcdir"/xattr-$pkgver
   python setup.py test
-  ) || warning "Tests failed"
+  ) || echo "Tests failed"
 }
 
 package() {
