--- a/fcitx-configtool/trunk/PKGBUILD
+++ b/fcitx-configtool/trunk/PKGBUILD
@@ -18,7 +18,7 @@ validpgpkeys=('2CC8A0609AD2A479C65B6D5C8E8B898CBF2412F9') # Weng Xuetian <wengxt
 
 build() {
   cd $pkgname-$pkgver
-  msg "Starting make..."
+  echo "Starting make..."
 
   cmake -DCMAKE_INSTALL_PREFIX=/usr .
   make
