--- a/haskell-attoparsec/trunk/PKGBUILD
+++ b/haskell-attoparsec/trunk/PKGBUILD
@@ -36,7 +36,7 @@ build() {
 
 check() {
     cd $_hkgname-$pkgver
-    runhaskell Setup test || warning "Tests failed, possibly due to unmet dependency version on QuickCheck"
+    runhaskell Setup test || echo "Tests failed, possibly due to unmet dependency version on QuickCheck"
 }
 
 package() {
