--- a/pandoc/trunk/PKGBUILD
+++ b/pandoc/trunk/PKGBUILD
@@ -57,7 +57,7 @@ build() {
 
 check() {
     cd "${srcdir}/${pkgname}-${pkgver}"
-    LC_CTYPE=en_US.UTF-8 runhaskell Setup test || warning "Tests failed"
+    LC_CTYPE=en_US.UTF-8 runhaskell Setup test || echo "Tests failed"
 }
 
 package() {
