--- a/python-axolotl-curve25519/trunk/PKGBUILD
+++ b/python-axolotl-curve25519/trunk/PKGBUILD
@@ -19,7 +19,7 @@ sha256sums=('cc8de0c140831519e45598b082fdef0e939fd30930be442e38bdec13dc16aab5')
 sha512sums=('cbc7c6caa47a9a811640c247a1be727d7b1b68bcdb4c5336e02b4d1eaf9fd2c57b7438b0da466a379a1c0f3f146756b9b7eea3c9b7945ce88478d4bf0b8a1e0d')
 
 build() {
-  msg "Building python..."
+  echo "Building python..."
   cd ${pkgname}-${_pkgver}
   python setup.py build
 }
