--- a/python-couchdb/trunk/PKGBUILD
+++ b/python-couchdb/trunk/PKGBUILD
@@ -26,7 +26,7 @@ check() {
   export PATH="$PATH:/usr/lib/couchdb/bin"
 
   cd couchdb-python-$pkgver
-  pifpaf run couchdb python setup.py test || warning "python 3 tests failed"
+  pifpaf run couchdb python setup.py test || echo "python 3 tests failed"
 }
 
 package() {
