--- a/python-invoke/trunk/PKGBUILD
+++ b/python-invoke/trunk/PKGBUILD
@@ -24,7 +24,7 @@ build() {
 
 check() {
   cd "$srcdir"/invoke-$pkgver
-  python setup.py pytest || warning "Tests failed"
+  python setup.py pytest || echo "Tests failed"
 }
 
 package() {
