--- a/python-openstackclient/trunk/PKGBUILD
+++ b/python-openstackclient/trunk/PKGBUILD
@@ -24,7 +24,7 @@ build() {
 
 check() {
   cd python-openstackclient-$pkgver
-  stestr run || warning "Tests failed: https://storyboard.openstack.org/#!/story/2003143"
+  stestr run || echo "Tests failed: https://storyboard.openstack.org/#!/story/2003143"
 }
 
 package() {
