--- a/python-pydot/trunk/PKGBUILD
+++ b/python-pydot/trunk/PKGBUILD
@@ -24,7 +24,7 @@ check() {
   # https://github.com/pydot/pydot/issues/204
 
   cd "$srcdir"/pydot-$pkgver/test
-  PYTHONPATH="$PWD/../build/lib:$PYTHONPATH" python pydot_unittest.py || warning "Tests failed"
+  PYTHONPATH="$PWD/../build/lib:$PYTHONPATH" python pydot_unittest.py || echo "Tests failed"
 }
 
 package() {
