--- a/python-pyftpdlib/trunk/PKGBUILD
+++ b/python-pyftpdlib/trunk/PKGBUILD
@@ -26,7 +26,7 @@ check() {
   # https://github.com/giampaolo/pyftpdlib/issues/500
 
   cd "$srcdir"/pyftpdlib-$pkgver
-  python setup.py pytest || warning "Tests failed"
+  python setup.py pytest || echo "Tests failed"
 }
 
 package() {
