--- a/python-pytest-cov/trunk/PKGBUILD
+++ b/python-pytest-cov/trunk/PKGBUILD
@@ -35,11 +35,11 @@ check() {
 
   cd "$srcdir"/pytest-cov-$pkgver
   python setup.py install --root="$PWD/tmp_install" --optimize=1
-  PYTHONPATH="$PWD/tmp_install/usr/lib/python3.8/site-packages:$PYTHONPATH:$PWD/tests" py.test || warning "Tests failed"
+  PYTHONPATH="$PWD/tmp_install/usr/lib/python3.8/site-packages:$PYTHONPATH:$PWD/tests" py.test || echo "Tests failed"
 
   cd "$srcdir"/pytest-cov-$pkgver-py2
   python2 setup.py install --root="$PWD/tmp_install" --optimize=1
-  PYTHONPATH="$PWD/tmp_install/usr/lib/python2.7/site-packages:$PYTHONPATH:$PWD/tests" py.test2 || warning "Tests failed"
+  PYTHONPATH="$PWD/tmp_install/usr/lib/python2.7/site-packages:$PYTHONPATH:$PWD/tests" py.test2 || echo "Tests failed"
 }
 
 package_python-pytest-cov() {
