--- a/python-zope-i18nmessageid/trunk/PKGBUILD
+++ b/python-zope-i18nmessageid/trunk/PKGBUILD
@@ -19,7 +19,7 @@ build() {
 
 check() {
   cd "$srcdir"/zope.i18nmessageid-$pkgver
-  PYTHONPATH="$PWD/build/lib.linux-$CARCH-3.8:$PYTHONPATH" python -m zope.testrunner --test-path=src || warning "Tests failed"
+  PYTHONPATH="$PWD/build/lib.linux-$CARCH-3.8:$PYTHONPATH" python -m zope.testrunner --test-path=src || echo "Tests failed"
 }
 
 package() {
