--- a/vigra/trunk/PKGBUILD
+++ b/vigra/trunk/PKGBUILD
@@ -42,7 +42,7 @@ build() {
 }
 
 check() {
-  make -C build -j1 -k check || warning "Tests failed" # https://github.com/ukoethe/vigra/issues/409
+  make -C build -j1 -k check || echo "Tests failed" # https://github.com/ukoethe/vigra/issues/409
 }
 
 package_vigra() {
