--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -44,25 +44,25 @@ build() {
   cd ${_pkgname}-${pkgver}
   export PATH="${srcdir}/${_pkgname}-${pkgver}/bin:${PATH}"
 
-  msg2 "Building nim"
+  echo "Building nim"
   (cd csources
     sh build.sh
   )
-  msg2 "Building koch"
+  echo "Building koch"
   nim c -d:release koch
   ./koch boot -d:release -d:nativeStacktrace -d:useGnuReadline
 
-  msg2 "Building libs"
+  echo "Building libs"
   (cd lib
     nim c --app:lib -d:createNimRtl -d:release nimrtl.nim
   )
 
-  msg2 "Building tools"
+  echo "Building tools"
   ./koch tools
   (cd tools
     nim c -d:release nimgrep.nim
   )
-  msg2 "Building nimsuggest"
+  echo "Building nimsuggest"
   nim c -d:release nimsuggest/nimsuggest.nim
 }
 
