--- a/deepin-image-viewer/repos/community-x86_64/PKGBUILD
+++ b/deepin-image-viewer/repos/community-x86_64/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=deepin-image-viewer
-pkgver=5.6.3.7
+pkgver=5.6.3.8
 pkgrel=1
 pkgdesc='An image viewing tool with fashion interface and smooth performance'
 arch=('x86_64')
@@ -12,13 +12,14 @@ makedepends=('qt5-tools')
 optdepends=('deepin-manual: for help menual'
             'deepin-shortcut-viewer: for shortcut display')
 groups=('deepin')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/deepin-image-viewer/archive/$pkgver.tar.gz"
-        deepin-image-viewer-qt5.15.patch)
-sha512sums=('cf73eab16517062f5c529c1d0f5256a6979ab59827b5e8652ed846123d7d26a2bd13f8889cab7a130fbc9275485c177a6c1173397b41a601d7c8a0b4dc51ca36'
-            'e802fa93972bf3d32c3672603e41bc662866aaf7e458b0cd7eeef786e22348c57161d3292754df5357beae6bb3b475bd45dfc6912c969200e4bf079c00b77763')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/linuxdeepin/deepin-image-viewer/archive/$pkgver.tar.gz")
+sha512sums=('29c83b0832230da6a5d5ea32cb36afb504a9f91477ce5fb93ea1f00f37d07358cbc378515d676b651b3b20415ced593f389f13ac5daa0a13a5a7db20c11b553e')
 
 prepare() {
-  patch -d $pkgname-$pkgver -p1 -i ../deepin-image-viewer-qt5.15.patch # Fix build with Qt 5.15
+  # They are moving files around without merging patches. Wow.
+  cd deepin-image-viewer-$pkgver/src/viewer
+  sed -i '/#include <QDebug>/a #include <QPainterPath>' module/view/contents/ttbcontent.cpp widgets/thumbnaillistview.cpp widgets/popupmenustyle.cpp widgets/thumbnaildelegate.cpp
+  sed -i '/#include <QtDebug>/a #include <QPainterPath>' module/view/contents/imageinfowidget.cpp
 }
 
 build() {
@@ -29,5 +30,5 @@ build() {
 
 package() {
   cd deepin-image-viewer-$pkgver
-  make INSTALL_ROOT="$pkgdir" install
+  make INSTALL_ROOT="$pkgdir" install -j1
 }
