--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,7 +12,7 @@
 # commit log for an old fix on how to tell it to use older versions of Ruby. I'm afraid we'll
 # need this again at some point in the future.
 pkgname=gitlab-shell
-pkgver=13.7.0
+pkgver=13.11.0
 pkgrel=1
 epoch=2
 pkgdesc="Git management software"
@@ -30,8 +30,8 @@ source=("${pkgname}-${pkgver}.tar.gz::https://gitlab.com/gitlab-org/gitlab-shell
         "configs.patch"
         "gitlab-shell.gitconfig"
         "gitlab-shell.sysusers")
-sha512sums=('1ef6587e2824d802e230d8824c210d0197ebe8b3f3fbe644d0a29411eeb34e6f78f5bca75c3acaadab7f0a14d9f7d45f8868e55bd01d1e3a85cbbcac6d24ea9a'
-            '49c5f15eeb985f402296faa991315311596ebf527b1fe715e94852c7048c767ccd69da3b42ddf3ebd45b86838ec72389d68a2204764f432ae5e9ce1651ff1966'
+sha512sums=('48e6846d72af94ee68e5e35f6856c6dd12402a65586a4fedc70aaf30725e9ebf35a5c95ef579178fff3d2a30cf414e5dea922a2994ac67b0ac0fe456c27fdf08'
+            '13c0fb88693e787f2960059985713d7ffb6d2fa51d9dbcba9c9562ae91e74bd3963efc63837cd19c5441fb5835d0c8eafd3285bea6676168f7b111a08fb086a7'
             'cb8003f2ce8013fcd807aae6d66c22c3a767e74d569bd69aaa5a54b84a36135d25b3af57861f858f8f407e089ff69ff5c325bf065c6051ce8fa197fab70470b8'
             '616188911fa7b7c569bc2d5e2024177e67366c48b4ffef1f7ad4dc8e4e9e2cdb421b687f45a1e9bdec8bf2736a157ca9f1e0ba24edae2f073b8c7b5ac42745e8')
 
@@ -86,7 +86,7 @@ package() {
   install -Dm644 config.yml.example "${pkgdir}${_etcdir}/config.yml"
   ln -fs "${_etcdir}/config.yml" "${pkgdir}${_datadir}/config.yml"
 
-  cp -r VERSION bin hooks spec support "${pkgdir}${_datadir}"
+  cp -r VERSION bin spec support "${pkgdir}${_datadir}"
   ln -fs "${_datadir}" "${pkgdir}/${_homedir}/"
 
   # Compatibility for FS#64251
