--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -103,7 +103,7 @@ check() {
   sed -i "s|parso =0.7.0|parso >=0.7.0|" -i binder/environment.yml
   sed -i "s|python-language-server >=0.34.0,<1.0.0|python-language-server >=0.34.0|" -i binder/environment.yml
   # Some tests failures but upstream does not support us
-  python runtests.py || warning "Tests failed"
+  python runtests.py || echo "Tests failed"
 }
 
 package() {
