--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -24,7 +24,7 @@ build() {
 check() {
   cd ${_pkg}.py-${pkgver}
   # Failures with 3.8, dead upstream
-  nosetests || warning "Tests failed"
+  nosetests || echo "Tests failed"
 }
 
 package() {
