--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -56,7 +56,7 @@ build() {
 check() {
     cd ${_pkg}-${pkgver}
     # https://github.com/pydata/xarray/issues/4281
-    pytest || warning "Tests failed"
+    pytest || echo "Tests failed"
 }
 
 package() {
