--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -24,7 +24,7 @@ build() {
 check() {
   cd ${_pkg}.py-${pkgver}
   # https://github.com/mwilliamson/spur.py/issues/85
-  nosetests || warning "Tests failed"
+  nosetests || echo "Tests failed"
 }
 
 package() {
