--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -43,7 +43,7 @@ build() {
 
 check() {
     cd $_hkgname-$pkgver
-    runhaskell Setup test || warning "Tests failed"
+    runhaskell Setup test || echo "Tests failed"
 }
 
 package() {
