--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -21,7 +21,7 @@ build() {
 check() {
   cd build
   # https://github.com/CODARcode/MGARD/issues/105
-  ctest -v || warning "Tests failed"
+  ctest -v || echo "Tests failed"
 }
 
 package() {
