--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -20,7 +20,7 @@ _targets="i686-w64-mingw32 x86_64-w64-mingw32"
 build() {
   cd "$srcdir"
   for _target in ${_targets}; do
-    msg "Building ${_target} CRT"
+    echo "Building ${_target} CRT"
     if [ ${_target} == "i686-w64-mingw32" ]; then
         _crt_configure_args="--disable-lib64 --enable-lib32"
     elif [ ${_target} == "x86_64-w64-mingw32" ]; then
@@ -36,7 +36,7 @@ build() {
 
 package() {
   for _target in ${_targets}; do
-    msg "Installing ${_target} crt"
+    echo "Installing ${_target} crt"
     cd "$srcdir"/crt-${_target}
     make DESTDIR="$pkgdir" install
   done
