--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -27,7 +27,7 @@ build() {
 check() {
   cd ${_pkg}-${pkgver}
   # Test.test_slowshot and Test.test_slowshot_wrap are timing out
-  PYTHONPATH="${PWD}/build/lib" pytest tests || warning "Tests failed"
+  PYTHONPATH="${PWD}/build/lib" pytest tests || echo "Tests failed"
 }
 
 package() {
